--- a/P2/Practica/README
+++ b/P2/Practica/README
@@ -1,7 +1,6 @@
 Para ejecutar desde 0 esta práctica:
 docker compose -f docker-compose.yml build
-docker compose -f docker-compose.yml up mongo
-docker compose run p1 python Main.py
+docker compose -f docker-compose.yml up (levanta mongo y el servidor en local en el puerto)
 
 Para bajarlo
 docker compose -f docker-compose.yml down --remove-orphans
